Fix --add-modules settings.